@@ -4,9 +4,23 @@
 \title{Direct labels for plots}
 \description{Direct labeling functions meant to be used with several plotting packages, including lattice and ggplot2.}
 \details{
-\tabular{ll}{Package: \tab directlabels\cr}
+\tabular{ll}{Package: \tab directlabels\cr
+Maintainer: \tab Toby Dylan Hocking <toby.hocking@inria.fr>\cr
+Author: \tab Toby Dylan Hocking\cr
+Version: \tab 1.3\cr
+License: \tab GPL-3\cr
+Title: \tab Direct labels for plots\cr
+URL: \tab http://directlabels.r-forge.r-project.org/\cr
+LazyLoad: \tab false\cr
+LazyData: \tab true\cr
+Suggests: \tab ks, MASS, inlinedocs, quadprog, ggplot2, lattice, alphahull, ElemStatLearn, proto\cr
+Depends: \tab grid\cr
+Collate: \tab utility.function.R compare.R dotplot.R lineplot.R
+densityplot.R  ggplot2.R  positioning.functions.R
+doc.R lattice.R scatterplot.R contourplot.R\cr}
 }
-\author{Toby Dylan Hocking <toby.hocking@inria.fr>}
+\author{Toby Dylan Hocking <toby.hocking@inria.fr>
+Toby Dylan Hocking <toby.hocking@inria.fr>}
 
 \keyword{ package }
 
